--- a/Task Manager/Views/Inventory/CreateInventory.cshtml
+++ b/Task Manager/Views/Inventory/CreateInventory.cshtml
@@ -132,7 +132,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-offset-6 col-lg-6 spacing">
-                                    <<button  class="btn btn-success" onclick="Add()" id="button" value="Create" />
+                                    <<button  class="btn btn-success" onclick="Add()" id="button"> Create </button>
                                     <<button  class="btn btn-info" value="Reset" onclick="location.reload();" />
                                 </div>
                             </div>
