--- a/Task Manager/Views/Shared/Normal.cshtml
+++ b/Task Manager/Views/Shared/Normal.cshtml
@@ -6,7 +6,6 @@
     <title>Task Management System</title>
 
     <link href="~/Content/Theme CSS/font-awesome.css" rel="stylesheet" />
-
     <link href="~/Content/Theme CSS/bootstrap.min.css" rel="stylesheet" />
     <!-- MetisMenu CSS -->
     <link href="../Content/Theme CSS/metisMenu.min.css" rel="stylesheet">
@@ -15,11 +14,10 @@
     <!-- Custom Fonts -->
     <link href="../Content/Theme CSS/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="~/Content/select2.css" rel="stylesheet" />
-    <link href="~/Content/select2-bootstrap.css" rel="stylesheet" />
     <link href="../Content/Theme CSS/dataTables.bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="../Content/Theme CSS/dataTables.responsive.css" rel="stylesheet" type="text/css">
     <script src="~/Scripts/Theme JS/jquery.min.js"></script>
+    <link href="~/Content/multiple-select.min.css" rel="stylesheet" />
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -316,19 +314,18 @@
         <!-- /.navbar-static-side -->
     </nav>
     @RenderBody()
-
     <!-- Bootstrap Core JavaScript -->
     <script src="../Scripts/Theme JS/bootstrap.min.js"></script>
     <!-- Metis Menu Plugin JavaScript -->
     <script src="../Scripts/Theme JS/metisMenu.min.js"></script>
     <!-- Custom Theme JavaScript -->
-    <script src="~/Scripts/Theme JS/sb-admin-2.js"></script>
-    <script src="~/Scripts/select2.js"></script>
-    <script src="~/Scripts/angular-ui-select2.js"></script>
+
     <script src="~/Scripts/angular.min.js"></script>
     <script src="~/Scripts/Theme JS/dataTables.responsive.js"></script>
     <script src="~/Scripts/Theme JS/dataTables.bootstrap.js"></script>
     <script src="~/Scripts/Theme JS/jquery.dataTables.js"></script>
+    <script src="~/Scripts/Theme JS/sb-admin-2.js"></script>
+    <script src="~/Scripts/multiple-select.min.js"></script>
     <script src="~/Scripts/Theme JS/jquery.dataTables.min.js"></script>
     <script>
         $(document).ready(function () {
