--- a/Task Manager/Content/Site.css
+++ b/Task Manager/Content/Site.css
@@ -1,4 +1,4 @@
-﻿select#ProjectDropdown {
+﻿select#ProjectDropdown,select#CustomerCityDropdown,.ddl {
     width: 100%;
     height: 34px;
     padding: 6px 12px;
@@ -10,33 +10,6 @@
     border: 1px solid #ccc;
     border-radius: 4px;
 }
-
-select#CustomerDropdown {
-    width: 100%;
-    height: 34px;
-    padding: 6px 12px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #555;
-    background-color: #fff;
-    background-image: none;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-select#ProjectManagerDropdown {
-    width: 100%;
-    height: 34px;
-    padding: 6px 12px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #555;
-    background-color: #fff;
-    background-image: none;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
 .ddlproject {
     margin-top: 5px;
     margin-bottom: 5px;
