--- a/Task Manager/Views/Ticket/CreateTicket.cshtml
+++ b/Task Manager/Views/Ticket/CreateTicket.cshtml
@@ -56,7 +56,7 @@
                                             <label>Customer Name</label>
                                         </div>
                                         <div class="col-lg-6 ">
-                                            <select ng-options="customer.id as customer.name for customer in customers" ng-model="customerId"></select>
+                                            <select ng-options="customer.id as customer.name for customer in customers" ng-model="customerId" class="ddl"></select>
 
                                         </div>
                                     </div>
@@ -65,7 +65,7 @@
                                             <label>Project Name</label>
                                         </div>
                                         <div class="col-lg-6 ">
-                                            <select ng-options="project.id as project.name for project in projects" ng-model="projectId"></select>
+                                            <select ng-options="project.id as project.name for project in projects" ng-model="projectId" class="ddl"></select>
                                         </div>
                                     </div>
                                     <div class="col-lg-12 spacing">
