complete almost second last day

--- a/Task Manager/Views/Inventory/CreateInventory.cshtml
+++ b/Task Manager/Views/Inventory/CreateInventory.cshtml
@@ -132,8 +132,8 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-offset-6 col-lg-6 spacing">
-                                    <<button  class="btn btn-success" onclick="Add()" id="button"> Create </button>
-                                    <<button  class="btn btn-info" value="Reset" onclick="location.reload();" />
+                                    <button  class="btn btn-success" onclick="Add()" id="button"> Create </button>
+                                    <button  class="btn btn-info" value="Reset" onclick="location.reload();">Reset</button>
                                 </div>
                             </div>
                             <!-- /.col-lg-6 (nested) -->
