--- a/Task Manager/Views/Ticket/CreateTicket.cshtml
+++ b/Task Manager/Views/Ticket/CreateTicket.cshtml
@@ -37,7 +37,7 @@
                         Create Tickets
                     </div>
                     <div class="panel-body" ng-controller="tickctrl">
-                        <form ng-submit="Add()">
+                        <form ng-submit="Add()" id="tickForm">
                             <div class="row">
                                 <div class=" col-lg-offset-3 col-lg-6">
                                     <div class="col-lg-12 spacing">
@@ -65,7 +65,7 @@
                                             <label>Project Name</label>
                                         </div>
                                         <div class="col-lg-6 ">
-                                            <select ng-options="project.id as project.name for project in projects" ng-model="projectId" class="ddl"></select>
+                                            <select ng-options="project.name for project in projects" ng-model="projectId" class="ddl"></select>
                                         </div>
                                     </div>
                                     <div class="col-lg-12 spacing">
@@ -149,14 +149,22 @@
 
         $scope.message = $http.post('/api/angularApi/' + 0).then(function (response) {
             $scope.projects = response.data;
+            
+            for (var i=0;i<$scope.projects.length;i++)
+            {
+                console.log($scope.projects.length);
+                if($scope.task.projectId==$scope.projects[i].id)
+                {
+                   
+               $scope.projectId = $scope.projects[i];
+                    
+                }
+            }
 
         });
         $scope.message = $http.post('/api/angularApi/').then(function (response) {
             $scope.optionsList = response.data;
         });
-
-
-
 
         //$(document).ready(function () {
         //    globalProjects = [];
@@ -208,12 +216,17 @@
             $scope.new.issue = $scope.task.task.description;
             $scope.new.email = $scope.task.task.email;
             $scope.new.sms = $scope.task.task.sms;
-            $scope.new.projectId = $scope.projectId;
+            $scope.new.projectId = $scope.projectId.id;
             $scope.new.assignedTo = $scope.selectedList;
             console.log($scope.new);
             $scope.message = $http.post('/api/ticketApi/', $scope.new).then(function (response) {
                 console.log(response.data);
                 alert("Task Added Sucessfully");
+                document.getElementById("tickForm").reset();
+                $scope.selectedList = [];
+
+                $scope.customerId = {};
+                $scope.projectId = {};
             });
 
         }
