--- a/Task Manager/Views/CheckStatus/Index.cshtml
+++ b/Task Manager/Views/CheckStatus/Index.cshtml
@@ -32,7 +32,7 @@
             <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                 <thead>
                     <tr>
-                        <th style="width:95px;">Number</th>
+                        <th>Ticket Number</th>
                         <th>Name</th>
                         <th>Project</th>
                         <th>Branch Code / Location</th>
@@ -54,6 +54,7 @@
 <input action="action" onclick="history.go(-1);" type="button" value="Back" class="btn btn-primary" id="back" />
 
 <script type="text/javascript">
+
     $(document).ready(function () {
         $.ajax({
             async: false,
@@ -64,16 +65,15 @@
             success: function (data) {
                 console.log(data);
                 filltable(data);
-                for (var i = 0; i < data.length; i++) {
-                    document.getElementById('customercode').innerHTML = data[i].code;
-                    document.getElementById('customername').innerHTML = data[i].customer_name;
-                }
+                document.getElementById('customercode').innerHTML = data[1].code;
+                document.getElementById('customername').innerHTML = data[1].customer_name;
             },
             error: function () { alert('Data Not Found'); }
         });
     });
     function filltable(datas) {
         $("#dataTables-example").DataTable({
+            "bDestroy": true,
             "aaData": datas,
             "aoColumns": [
                 { "mDataProp": "id" },
@@ -85,6 +85,5 @@
                 { "mDataProp": "status" }
             ]
         });
-
     }
 </script>
