--- a/Task Manager/Views/Project/CreateProject.cshtml
+++ b/Task Manager/Views/Project/CreateProject.cshtml
@@ -44,7 +44,7 @@
                                                 <label>Customer Name</label> <input type="hidden" ng-model="project.id"></input>
                                             </div>
                                             <div class="col-lg-6 ">
-                                                <select ng-options="customer.id as customer.name for customer in customers" ng-model="customerId" class="ddl"></select>
+                                                <select ng-options="customer.name for customer in customers" ng-model="customerId" class="ddl"></select>
                                             </div>
                                         </div>
                                         <div class="col-lg-12 spacing">
@@ -77,7 +77,7 @@
                                             </div>
                                             @*Usman added resco side project manager*@
                                             <div class="col-lg-6 ">
-                                                <select ng-options="optionList.id as optionList.name for optionList in optionsList" ng-model="userId" class="ddl"></select>
+                                                <select ng-options="optionList.name for optionList in optionsList" ng-model="userId" class="ddl"></select>
                                             </div>
                                         </div>
                                         <div class="col-lg-12 spacing">
@@ -163,12 +163,29 @@
             });
         $scope.message = $http.get('/api/angularApi/' + 0).then(function (response) {
             $scope.customers = response.data;
-            console.log($scope.customers);
+
+            //
+            for (var i = 0; i < $scope.customers.length; i++) {
+                console.log($scope.customers.length);
+                if ($scope.project.customer.customerId == $scope.customers[i].id) {
+
+                    $scope.customerId = $scope.customers[i];
+                }
+            }
+            //
         });
 
         $scope.message = $http.post('/api/angularApi/').then(function (response) {
             $scope.optionsList = response.data;
-            console.log($scope.optionsList);
+      
+
+            for (var i = 0; i < $scope.optionsList.length; i++) {
+                console.log($scope.optionsList.length);
+                if ($scope.project.projectManager.id == $scope.optionsList[i].id) {
+
+                    $scope.userId = $scope.optionsList[i];
+                }
+            }
         });
 
 
@@ -179,12 +196,12 @@
             $scope.new.projectName = $scope.project.Project_Name;
             $scope.new.startDate = $scope.project.Start_Date;
             $scope.new.endDate = $scope.project.End_Date;
-            $scope.new.pmId = $scope.userId;
+            $scope.new.pmId = $scope.userId.id;
             $scope.new.pm = $scope.project.customerContactDetail.project_manager;
             $scope.new.number = $scope.project.customerContactDetail.contact_number;
             $scope.new.email = $scope.project.customerContactDetail.email;
             $scope.new.address = $scope.project.customerContactDetail.address;
-            $scope.new.cId = $scope.customerId;
+            $scope.new.cId = $scope.customerId.id;
 
             console.log($scope.new);
 
