--- a/Task Manager/Views/message/ViewMessage.cshtml
+++ b/Task Manager/Views/message/ViewMessage.cshtml
@@ -5,7 +5,7 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Task Conversation</h1>
+            <h1 class="page-header">Task/Ticket Conversation</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
@@ -164,7 +164,7 @@
 <script>
     $(document).ready(function () {
         $.ajax({
-            async: false,
+            async: true,
             url: '/api/messageApi/',
             type: 'GET',
             contentType: "application/json;charset=utf-8",
